# mx-gst-pipeline-creator

./: .gitignore  AUTHORS  configure.ac
src/: Makefile.am  main.c
src/ihm/: mx-graph-element-link.c  mx-graph-element-link.h  mx-graph-element-pad.c  mx-graph-element-pad.h  mx-graph-element.c  mx-graph-element.h
src/mx-graph/: Makefile.am  mx-gobject-properties-editor.c  mx-gobject-properties-editor.h  mx-graph-element-link.c  mx-graph-element-link.h  mx-graph-element-pad.c  mx-graph-element-pad.h  mx-graph-element.c  mx-graph-element.h  mx-graph.c  mx-graph.h  mx-selectable.c  mx-selectable.h  mx-spin-button.c  mx-spin-button.h
src/mx-gst-graph/: Makefile.am  mx-gst-graph-element-pad.c  mx-gst-graph-element-pad.h  mx-gst-graph-element.c  mx-gst-graph-element.h  mx-gst-pipeline.c  mx-gst-pipeline.h
